--- a/styles/globals.css
+++ b/styles/globals.css
@@ -100,4 +100,26 @@ h6 {
   body {
     @apply bg-background text-foreground;
   }
+  h1 {
+    @apply text-[36px] tracking-[3px] uppercase lg:tracking-[5px] lg:text-[48px];
+  }
+}
+
+@layer components {
+  .subheading {
+    @apply text-[16px] uppercase leading-none font-medium;
+  }
+}
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 30s linear infinite;
 }
