--- a/styles/globals.css
+++ b/styles/globals.css
@@ -109,6 +109,9 @@ h6 {
   h3 {
     @apply text-[24px] tracking-[10%] lg:text-[30px] leading-none;
   }
+  h4 {
+    @apply text-[20px] tracking-[10%] lg:text-[24px] leading-none;
+  }
 }
 
 @layer components {
